style: fix spacing error in style

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -25,11 +25,11 @@ body {
 
 /**
  * =================================================================================
- * MAIN
+ * APP
  * =================================================================================
  */
 
-main#app-container {
+#app-container {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -114,6 +114,17 @@ main#app-container {
 
 /**
  * =================================================================================
+ * MAIN
+ * =================================================================================
+ */
+
+.main {
+    margin: calc(50px + 64px) auto 60px;
+    width: 100%;
+}
+
+/**
+ * =================================================================================
  * SECTION
  * =================================================================================
  */
@@ -121,7 +132,6 @@ main#app-container {
 .section {
     display: flex;
     flex-direction: column;
-    margin: calc(50px + 64px) auto 60px;
     padding: 0 10px 0 10px;
     width: 100%;
 
